--- a/subway zip code api.ipynb
+++ b/subway zip code api.ipynb
@@ -2,9 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tskth\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:48: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "C:\\Users\\tskth\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:55: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "C:\\Users\\tskth\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:671: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_with_indexer(indexer, value)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import urllib \n",
@@ -85,6 +105,166 @@
     "#exporting DataFrame as .csv file, index=true creates aditional column with dataframe indexes\n",
     "#sub_st_df.to_csv(r'PATH TO FOLDER YOU WANT THE FILE AT/sub_st_zip.csv', index= False) \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Stop Name</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>GTFS Latitude</th>\n",
+       "      <th>GTFS Longitude</th>\n",
+       "      <th>Zip Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lexington Av/59 St</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.762660</td>\n",
+       "      <td>-73.967258</td>\n",
+       "      <td>10065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5 Av/59 St</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.764811</td>\n",
+       "      <td>-73.973347</td>\n",
+       "      <td>10065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57 St - 7 Av</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.764664</td>\n",
+       "      <td>-73.980658</td>\n",
+       "      <td>10106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>49 St</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.759901</td>\n",
+       "      <td>-73.984139</td>\n",
+       "      <td>10019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Times Sq - 42 St</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.754672</td>\n",
+       "      <td>-73.986754</td>\n",
+       "      <td>10018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>Grand Central - 42 St</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.752769</td>\n",
+       "      <td>-73.979189</td>\n",
+       "      <td>10017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>34 St - 11 Av</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.755882</td>\n",
+       "      <td>-74.001910</td>\n",
+       "      <td>ERROR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>96 St</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.784318</td>\n",
+       "      <td>-73.947152</td>\n",
+       "      <td>10029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>86 St</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.777891</td>\n",
+       "      <td>-73.951787</td>\n",
+       "      <td>10028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>72 St</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.768799</td>\n",
+       "      <td>-73.958424</td>\n",
+       "      <td>10021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>153 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Stop Name Borough  GTFS Latitude  GTFS Longitude Zip Code\n",
+       "0       Lexington Av/59 St       M      40.762660      -73.967258    10065\n",
+       "1               5 Av/59 St       M      40.764811      -73.973347    10065\n",
+       "2             57 St - 7 Av       M      40.764664      -73.980658    10106\n",
+       "3                    49 St       M      40.759901      -73.984139    10019\n",
+       "4         Times Sq - 42 St       M      40.754672      -73.986754    10018\n",
+       "..                     ...     ...            ...             ...      ...\n",
+       "148  Grand Central - 42 St       M      40.752769      -73.979189    10017\n",
+       "149          34 St - 11 Av       M      40.755882      -74.001910    ERROR\n",
+       "150                  96 St       M      40.784318      -73.947152    10029\n",
+       "151                  86 St       M      40.777891      -73.951787    10028\n",
+       "152                  72 St       M      40.768799      -73.958424    10021\n",
+       "\n",
+       "[153 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub_st_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -103,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
