Update subway zip code api.ipynb

--- a/data_cleaning/subway zip code api.ipynb
+++ b/data_cleaning/subway zip code api.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "# Part 2, since we only have name of the station in our list we add \"Subway Station New York\" to the end of each input\n",
     "# Our only query is \"formatted_address\" field and last part is the API key\n",
-    "url2 = 'Subway%Station%New%York&inputtype=textquery&fields=formatted_address&key=AIzaSyDN9Bns2x7oLoXlf6lDYtMaWNCrtXkIaAU'\n",
+    "url2 = 'Subway%Station%New%York&inputtype=textquery&fields=formatted_address&key=(api key goes here)'\n",
     "\n",
     "# Indexing through every row of our df\n",
     "for i in sub_st_df.index:\n",
