Update stations with elevators and distances.ipynb

--- a/data_cleaning/stations with elevators and distances.ipynb
+++ b/data_cleaning/stations with elevators and distances.ipynb
@@ -60,7 +60,7 @@
     "for i in range(len(no_elev_st_coor)):\n",
     "    url4 = \"https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=\"\n",
     "    url5 = \"&destinations=\"\n",
-    "    url6 = \"&mode=walking&key=AIzaSyDN9Bns2x7oLoXlf6lDYtMaWNCrtXkIaAU\"\n",
+    "    url6 = \"&mode=walking&key=(APIKEY GOES HERE)\"\n",
     "    \n",
     "    #makes list of distance to every station w/ elevator, selecs min value and adds it to \"dist to elev\" column in df \n",
     "    mindist= list()\n",
